@@ -450,9 +450,6 @@
                 Rationale is that list stores are only a particular case
                 of tree stores...
 
-1188 2016- 9-13 BUG: when cancelling a printing, the "successfully printed"
-                message is anyway displayed
-
 1190 2016- 9-13 OpeTemplatePage: recurrent operation indicator no more
                 display (and TVA ?)
 
@@ -1626,6 +1623,10 @@
 
 1187 2016- 9-13 BUG: selecting an account with double click no more close
                 the window
+     2016- 9-14 fixed
+
+1188 2016- 9-13 BUG: when cancelling a printing, the "successfully printed"
+                message is anyway displayed
      2016- 9-14 fixed
 
 1189 2016- 9-13 BUG: when opening the operation template view
