@@ -42,7 +42,11 @@
 
  Bug fixes:
 
-   - 
+   - AccountSelect: close the window on account selection (todo #1187).
+   - IPrintable: does not say "succesfully printed" when cancelled (todo #1188).
+   - OpeTemplatePage: fix row activation.
+   - OpeTemplateSelect: fix missing getter.
+   - OpeTemplateStore: fix row insertion (todo #1189).
 
  Other changes:
 
